parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM var procedure block END
Rule 2     var -> DIM repeated_identifier AS type repeated_size var
Rule 3     var -> DIM repeated_identifier AS STRING_TYPE var
Rule 4     var -> empty
Rule 5     repeated_size -> SIZE repeated_size
Rule 6     repeated_size -> SIZE_ID repeated_size
Rule 7     repeated_size -> empty
Rule 8     repeated_identifier -> IDENTIFIER COMMA repeated_identifier
Rule 9     repeated_identifier -> IDENTIFIER
Rule 10    type -> INT_TYPE
Rule 11    type -> FLOAT_TYPE
Rule 12    block -> statement block
Rule 13    block -> empty
Rule 14    statement -> INPUT repeated_print
Rule 15    statement -> PRINT repeated_print
Rule 16    statement -> GOSUB LABEL
Rule 17    statement -> GOTO LABEL
Rule 18    statement -> LABEL_SALTO
Rule 19    statement -> FOR aux1 TO aux2 block NEXT aux3
Rule 20    aux1 -> IDENTIFIER EQUALS expression
Rule 21    aux2 -> expression
Rule 22    aux3 -> IDENTIFIER
Rule 23    statement -> DO do_while_inicio block LOOP WHILE aux_do_while
Rule 24    do_while_inicio -> empty
Rule 25    aux_do_while -> expression
Rule 26    statement -> WHILE aux_while DO block LOOP fin_while
Rule 27    aux_while -> expression
Rule 28    fin_while -> empty
Rule 29    statement -> IF aux_if THEN block ELSE aux_else block END IF aux_fin
Rule 30    aux_if -> expression
Rule 31    aux_else -> empty
Rule 32    aux_fin -> empty
Rule 33    statement -> LET IDENTIFIER repeated_size EQUALS expression
Rule 34    procedure -> LABEL block RETURN procedure
Rule 35    procedure -> empty
Rule 36    repeated_print -> repeated_elem COMMA repeated_print
Rule 37    repeated_print -> repeated_elem
Rule 38    repeated_elem -> STRING
Rule 39    repeated_elem -> elem
Rule 40    expression -> expression_s op_rel expression_s
Rule 41    expression -> expression_s
Rule 42    expression_s -> term
Rule 43    expression_s -> term PLUS expression_s
Rule 44    expression_s -> term MINUS expression_s
Rule 45    expression_s -> term OR expression_s
Rule 46    term -> factor
Rule 47    term -> factor MULTIPLY term
Rule 48    term -> factor DIVIDE term
Rule 49    term -> factor AND term
Rule 50    factor -> elem
Rule 51    factor -> OPENPAR expression CLOSEPAR
Rule 52    elem -> INT
Rule 53    elem -> IDENTIFIER repeated_size
Rule 54    elem -> elem_else
Rule 55    elem_else -> FLOAT
Rule 56    op_rel -> LESSTHANOREQUAL
Rule 57    op_rel -> GREATERTHANOREQUAL
Rule 58    op_rel -> ISEQUALTO
Rule 59    op_rel -> GREATERTHAN
Rule 60    op_rel -> LESSTHAN
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 49
AS                   : 2 3
CLOSEPAR             : 51
COMMA                : 8 36
DIM                  : 2 3
DIVIDE               : 48
DO                   : 23 26
ELSE                 : 29
END                  : 1 29
EQUALS               : 20 33
FLOAT                : 55
FLOAT_TYPE           : 11
FOR                  : 19
GOSUB                : 16
GOTO                 : 17
GREATERTHAN          : 59
GREATERTHANOREQUAL   : 57
IDENTIFIER           : 8 9 20 22 33 53
IF                   : 29 29
INPUT                : 14
INT                  : 52
INT_TYPE             : 10
ISEQUALTO            : 58
LABEL                : 16 17 34
LABEL_SALTO          : 18
LESSTHAN             : 60
LESSTHANOREQUAL      : 56
LET                  : 33
LOOP                 : 23 26
MINUS                : 44
MULTIPLY             : 47
NEXT                 : 19
OPENPAR              : 51
OR                   : 45
PLUS                 : 43
PRINT                : 15
PROGRAM              : 1
RETURN               : 34
SIZE                 : 5
SIZE_ID              : 6
STRING               : 38
STRING_TYPE          : 3
THEN                 : 29
TO                   : 19
WHILE                : 23 26
error                : 

Nonterminals, with rules where they appear

aux1                 : 19
aux2                 : 19
aux3                 : 19
aux_do_while         : 23
aux_else             : 29
aux_fin              : 29
aux_if               : 29
aux_while            : 26
block                : 1 12 19 23 26 29 29 34
do_while_inicio      : 23
elem                 : 39 50
elem_else            : 54
empty                : 4 7 13 24 28 31 32 35
expression           : 20 21 25 27 30 33 51
expression_s         : 40 40 41 43 44 45
factor               : 46 47 48 49
fin_while            : 26
op_rel               : 40
procedure            : 1 34
programa             : 0
repeated_elem        : 36 37
repeated_identifier  : 2 3 8
repeated_print       : 14 15 36
repeated_size        : 2 5 6 33 53
statement            : 12
term                 : 42 43 44 45 47 48 49
type                 : 2
var                  : 1 2 3

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM var procedure block END

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . var procedure block END
    (2) var -> . DIM repeated_identifier AS type repeated_size var
    (3) var -> . DIM repeated_identifier AS STRING_TYPE var
    (4) var -> . empty
    (61) empty -> .

    DIM             shift and go to state 4
    LABEL           reduce using rule 61 (empty -> .)
    INPUT           reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    GOSUB           reduce using rule 61 (empty -> .)
    GOTO            reduce using rule 61 (empty -> .)
    LABEL_SALTO     reduce using rule 61 (empty -> .)
    FOR             reduce using rule 61 (empty -> .)
    DO              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    LET             reduce using rule 61 (empty -> .)
    END             reduce using rule 61 (empty -> .)

    var                            shift and go to state 3
    empty                          shift and go to state 5

state 3

    (1) programa -> PROGRAM var . procedure block END
    (34) procedure -> . LABEL block RETURN procedure
    (35) procedure -> . empty
    (61) empty -> .

    LABEL           shift and go to state 7
    INPUT           reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    GOSUB           reduce using rule 61 (empty -> .)
    GOTO            reduce using rule 61 (empty -> .)
    LABEL_SALTO     reduce using rule 61 (empty -> .)
    FOR             reduce using rule 61 (empty -> .)
    DO              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    LET             reduce using rule 61 (empty -> .)
    END             reduce using rule 61 (empty -> .)

    procedure                      shift and go to state 6
    empty                          shift and go to state 8

state 4

    (2) var -> DIM . repeated_identifier AS type repeated_size var
    (3) var -> DIM . repeated_identifier AS STRING_TYPE var
    (8) repeated_identifier -> . IDENTIFIER COMMA repeated_identifier
    (9) repeated_identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    repeated_identifier            shift and go to state 9

state 5

    (4) var -> empty .

    LABEL           reduce using rule 4 (var -> empty .)
    INPUT           reduce using rule 4 (var -> empty .)
    PRINT           reduce using rule 4 (var -> empty .)
    GOSUB           reduce using rule 4 (var -> empty .)
    GOTO            reduce using rule 4 (var -> empty .)
    LABEL_SALTO     reduce using rule 4 (var -> empty .)
    FOR             reduce using rule 4 (var -> empty .)
    DO              reduce using rule 4 (var -> empty .)
    WHILE           reduce using rule 4 (var -> empty .)
    IF              reduce using rule 4 (var -> empty .)
    LET             reduce using rule 4 (var -> empty .)
    END             reduce using rule 4 (var -> empty .)


state 6

    (1) programa -> PROGRAM var procedure . block END
    (12) block -> . statement block
    (13) block -> . empty
    (14) statement -> . INPUT repeated_print
    (15) statement -> . PRINT repeated_print
    (16) statement -> . GOSUB LABEL
    (17) statement -> . GOTO LABEL
    (18) statement -> . LABEL_SALTO
    (19) statement -> . FOR aux1 TO aux2 block NEXT aux3
    (23) statement -> . DO do_while_inicio block LOOP WHILE aux_do_while
    (26) statement -> . WHILE aux_while DO block LOOP fin_while
    (29) statement -> . IF aux_if THEN block ELSE aux_else block END IF aux_fin
    (33) statement -> . LET IDENTIFIER repeated_size EQUALS expression
    (61) empty -> .

    INPUT           shift and go to state 14
    PRINT           shift and go to state 15
    GOSUB           shift and go to state 16
    GOTO            shift and go to state 17
    LABEL_SALTO     shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    LET             shift and go to state 23
    END             reduce using rule 61 (empty -> .)

    block                          shift and go to state 11
    statement                      shift and go to state 12
    empty                          shift and go to state 13

state 7

    (34) procedure -> LABEL . block RETURN procedure
    (12) block -> . statement block
    (13) block -> . empty
    (14) statement -> . INPUT repeated_print
    (15) statement -> . PRINT repeated_print
    (16) statement -> . GOSUB LABEL
    (17) statement -> . GOTO LABEL
    (18) statement -> . LABEL_SALTO
    (19) statement -> . FOR aux1 TO aux2 block NEXT aux3
    (23) statement -> . DO do_while_inicio block LOOP WHILE aux_do_while
    (26) statement -> . WHILE aux_while DO block LOOP fin_while
    (29) statement -> . IF aux_if THEN block ELSE aux_else block END IF aux_fin
    (33) statement -> . LET IDENTIFIER repeated_size EQUALS expression
    (61) empty -> .

    INPUT           shift and go to state 14
    PRINT           shift and go to state 15
    GOSUB           shift and go to state 16
    GOTO            shift and go to state 17
    LABEL_SALTO     shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    LET             shift and go to state 23
    RETURN          reduce using rule 61 (empty -> .)

    block                          shift and go to state 24
    statement                      shift and go to state 12
    empty                          shift and go to state 13

state 8

    (35) procedure -> empty .

    INPUT           reduce using rule 35 (procedure -> empty .)
    PRINT           reduce using rule 35 (procedure -> empty .)
    GOSUB           reduce using rule 35 (procedure -> empty .)
    GOTO            reduce using rule 35 (procedure -> empty .)
    LABEL_SALTO     reduce using rule 35 (procedure -> empty .)
    FOR             reduce using rule 35 (procedure -> empty .)
    DO              reduce using rule 35 (procedure -> empty .)
    WHILE           reduce using rule 35 (procedure -> empty .)
    IF              reduce using rule 35 (procedure -> empty .)
    LET             reduce using rule 35 (procedure -> empty .)
    END             reduce using rule 35 (procedure -> empty .)


state 9

    (2) var -> DIM repeated_identifier . AS type repeated_size var
    (3) var -> DIM repeated_identifier . AS STRING_TYPE var

    AS              shift and go to state 25


state 10

    (8) repeated_identifier -> IDENTIFIER . COMMA repeated_identifier
    (9) repeated_identifier -> IDENTIFIER .

    COMMA           shift and go to state 26
    AS              reduce using rule 9 (repeated_identifier -> IDENTIFIER .)


state 11

    (1) programa -> PROGRAM var procedure block . END

    END             shift and go to state 27


state 12

    (12) block -> statement . block
    (12) block -> . statement block
    (13) block -> . empty
    (14) statement -> . INPUT repeated_print
    (15) statement -> . PRINT repeated_print
    (16) statement -> . GOSUB LABEL
    (17) statement -> . GOTO LABEL
    (18) statement -> . LABEL_SALTO
    (19) statement -> . FOR aux1 TO aux2 block NEXT aux3
    (23) statement -> . DO do_while_inicio block LOOP WHILE aux_do_while
    (26) statement -> . WHILE aux_while DO block LOOP fin_while
    (29) statement -> . IF aux_if THEN block ELSE aux_else block END IF aux_fin
    (33) statement -> . LET IDENTIFIER repeated_size EQUALS expression
    (61) empty -> .

    INPUT           shift and go to state 14
    PRINT           shift and go to state 15
    GOSUB           shift and go to state 16
    GOTO            shift and go to state 17
    LABEL_SALTO     shift and go to state 18
    FOR             shift and go to state 19
    DO              shift and go to state 20
    WHILE           shift and go to state 21
    IF              shift and go to state 22
    LET             shift and go to state 23
    END             reduce using rule 61 (empty -> .)
    RETURN          reduce using rule 61 (empty -> .)
    LOOP            reduce using rule 61 (empty -> .)
    ELSE            reduce using rule 61 (empty -> .)
    NEXT            reduce using rule 61 (empty -> .)

    statement                      shift and go to state 12
    block                          shift and go to state 28
    empty                          shift and go to state 13

state 13

    (13) block -> empty .

    END             reduce using rule 13 (block -> empty .)
    RETURN          reduce using rule 13 (block -> empty .)
    LOOP            reduce using rule 13 (block -> empty .)
    ELSE            reduce using rule 13 (block -> empty .)
    NEXT            reduce using rule 13 (block -> empty .)


state 14

    (14) statement -> INPUT . repeated_print
    (36) repeated_print -> . repeated_elem COMMA repeated_print
    (37) repeated_print -> . repeated_elem
    (38) repeated_elem -> . STRING
    (39) repeated_elem -> . elem
    (52) elem -> . INT
    (53) elem -> . IDENTIFIER repeated_size
    (54) elem -> . elem_else
    (55) elem_else -> . FLOAT

    STRING          shift and go to state 31
    INT             shift and go to state 33
    IDENTIFIER      shift and go to state 34
    FLOAT           shift and go to state 36

    repeated_print                 shift and go to state 29
    repeated_elem                  shift and go to state 30
    elem                           shift and go to state 32
    elem_else                      shift and go to state 35

state 15

    (15) statement -> PRINT . repeated_print
    (36) repeated_print -> . repeated_elem COMMA repeated_print
    (37) repeated_print -> . repeated_elem
    (38) repeated_elem -> . STRING
    (39) repeated_elem -> . elem
    (52) elem -> . INT
    (53) elem -> . IDENTIFIER repeated_size
    (54) elem -> . elem_else
    (55) elem_else -> . FLOAT

    STRING          shift and go to state 31
    INT             shift and go to state 33
    IDENTIFIER      shift and go to state 34
    FLOAT           shift and go to state 36

    repeated_print                 shift and go to state 37
    repeated_elem                  shift and go to state 30
    elem                           shift and go to state 32
    elem_else                      shift and go to state 35

state 16

    (16) statement -> GOSUB . LABEL

    LABEL           shift and go to state 38


state 17

    (17) statement -> GOTO . LABEL

    LABEL           shift and go to state 39


state 18

    (18) statement -> LABEL_SALTO .

    INPUT           reduce using rule 18 (statement -> LABEL_SALTO .)
    PRINT           reduce using rule 18 (statement -> LABEL_SALTO .)
    GOSUB           reduce using rule 18 (statement -> LABEL_SALTO .)
    GOTO            reduce using rule 18 (statement -> LABEL_SALTO .)
    LABEL_SALTO     reduce using rule 18 (statement -> LABEL_SALTO .)
    FOR             reduce using rule 18 (statement -> LABEL_SALTO .)
    DO              reduce using rule 18 (statement -> LABEL_SALTO .)
    WHILE           reduce using rule 18 (statement -> LABEL_SALTO .)
    IF              reduce using rule 18 (statement -> LABEL_SALTO .)
    LET             reduce using rule 18 (statement -> LABEL_SALTO .)
    END             reduce using rule 18 (statement -> LABEL_SALTO .)
    RETURN          reduce using rule 18 (statement -> LABEL_SALTO .)
    LOOP            reduce using rule 18 (statement -> LABEL_SALTO .)
    ELSE            reduce using rule 18 (statement -> LABEL_SALTO .)
    NEXT            reduce using rule 18 (statement -> LABEL_SALTO .)


state 19

    (19) statement -> FOR . aux1 TO aux2 block NEXT aux3
    (20) aux1 -> . IDENTIFIER EQUALS expression

    IDENTIFIER      shift and go to state 41

    aux1                           shift and go to state 40

state 20

    (23) statement -> DO . do_while_inicio block LOOP WHILE aux_do_while
    (24) do_while_inicio -> . empty
    (61) empty -> .

    INPUT           reduce using rule 61 (empty -> .)
    PRINT           reduce using rule 61 (empty -> .)
    GOSUB           reduce using rule 61 (empty -> .)
    GOTO            reduce using rule 61 (empty -> .)
    LABEL_SALTO     reduce using rule 61 (empty -> .)
    FOR             reduce using rule 61 (empty -> .)
    DO              reduce using rule 61 (empty -> .)
    WHILE           reduce using rule 61 (empty -> .)
    IF              reduce using rule 61 (empty -> .)
    LET             reduce using rule 61 (empty -> .)
    LOOP            reduce using rule 61 (empty -> .)

    do_while_inicio                shift and go to state 42
    empty                          shift and go to state 43

state 21

    (26) statement -> WHILE . aux_while DO block LOOP fin_while
    (27) aux_while -> . expression
    (40) expression -> . expression_s op_rel expression_s
    (41) expression -> . expression_s
    (42) expression_s -> . term
    (43) expression_s -> . term PLUS expression_s
    (44) expression_s -> . term MINUS expression_s
    (45) expression_s -> . term OR expression_s
    (46) term -> . factor
    (47) term -> . factor MULTIPLY term
    (48) term -> . factor DIVIDE term
    (49) term -> . factor AND term
    (50) factor -> . elem
    (51) factor -> . OPENPAR expression CLOSEPAR
    (52) elem -> . INT
    (53) elem -> . IDENTIFIER repeated_size
    (54) elem -> . elem_else
    (55) elem_else -> . FLOAT

    OPENPAR         shift and go to state 50
    INT             shift and go to state 33
    IDENTIFIER      shift and go to state 34
    FLOAT           shift and go to state 36

    aux_while                      shift and go to state 44
    expression                     shift and go to state 45
    expression_s                   shift and go to state 46
    term                           shift and go to state 47
    factor                         shift and go to state 48
    elem                           shift and go to state 49
    elem_else                      shift and go to state 35

state 22

    (29) statement -> IF . aux_if THEN block ELSE aux_else block END IF aux_fin
    (30) aux_if -> . expression
    (40) expression -> . expression_s op_rel expression_s
    (41) expression -> . expression_s
    (42) expression_s -> . term
    (43) expression_s -> . term PLUS expression_s
    (44) expression_s -> . term MINUS expression_s
    (45) expression_s -> . term OR expression_s
    (46) term -> . factor
    (47) term -> . factor MULTIPLY term
    (48) term -> . factor DIVIDE term
    (49) term -> . factor AND term
    (50) factor -> . elem
    (51) factor -> . OPENPAR expression CLOSEPAR
    (52) elem -> . INT
    (53) elem -> . IDENTIFIER repeated_size
    (54) elem -> . elem_else
    (55) elem_else -> . FLOAT

    OPENPAR         shift and go to state 50
    INT             shift and go to state 33
    IDENTIFIER      shift and go to state 34
    FLOAT           shift and go to state 36

    aux_if                         shift and go to state 51
    expression                     shift and go to state 52
    expression_s                   shift and go to state 46
    term                           shift and go to state 47
    factor                         shift and go to state 48
    elem                           shift and go to state 49
    elem_else                      shift and go to state 35

state 23

    (33) statement -> LET . IDENTIFIER repeated_size EQUALS expression

    IDENTIFIER      shift and go to state 53


state 24

    (34) procedure -> LABEL block . RETURN procedure

    RETURN          shift and go to state 54


state 25

    (2) var -> DIM repeated_identifier AS . type repeated_size var
    (3) var -> DIM repeated_identifier AS . STRING_TYPE var
    (10) type -> . INT_TYPE
    (11) type -> . FLOAT_TYPE

    STRING_TYPE     shift and go to state 56
    INT_TYPE        shift and go to state 57
    FLOAT_TYPE      shift and go to state 58

    type                           shift and go to state 55

state 26

    (8) repeated_identifier -> IDENTIFIER COMMA . repeated_identifier
    (8) repeated_identifier -> . IDENTIFIER COMMA repeated_identifier
    (9) repeated_identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 10

    repeated_identifier            shift and go to state 59

state 27

    (1) programa -> PROGRAM var procedure block END .

    $end            reduce using rule 1 (programa -> PROGRAM var procedure block END .)


state 28

    (12) block -> statement block .

    END             reduce using rule 12 (block -> statement block .)
    RETURN          reduce using rule 12 (block -> statement block .)
    LOOP            reduce using rule 12 (block -> statement block .)
    ELSE            reduce using rule 12 (block -> statement block .)
    NEXT            reduce using rule 12 (block -> statement block .)


state 29

    (14) statement -> INPUT repeated_print .
